<resources>
    <string name="app_name">TesteWebservice</string>
    <string name="vazio"></string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome:</string>
    <string name="gravar">Gravar</string>
    <string name="mostrar">Mostrar</string>
    <string name="atualizar_registro_selecionado">Atualizar Registro Selecionado</string>
    <string name="excluir_registro_selecionado">Excluir Registro Selecionado</string>
</resources>
